--- a/app/views/home/_new_question_form.html.erb
+++ b/app/views/home/_new_question_form.html.erb
@@ -7,26 +7,26 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <form>
+<%= form_for :question, url: '/questions', html: { class: 'form-horizontal'} do %>
+<div class="modal-body">
   <div class="form-group row">
     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3">
+      <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Email" required>
     </div>
   </div>
   <div class="form-group row">
-    <label for="validationTextarea" class="col-sm-2 col-form-label">Question</label>
+    <label for="question" class="col-sm-2 col-form-label">Question</label>
     <div class="col-sm-10">
-      <textarea class="form-control" id="validationTextarea" placeholder="What would you like to know?"></textarea>
+      <textarea class="form-control" name="question" id="question" placeholder="What would you like to know?" required></textarea>
     </div>
   </div>
-</form>
-      </div>
+</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
