--- a/app/views/home/question.html.erb
+++ b/app/views/home/question.html.erb
@@ -1,35 +1,42 @@
-<h1>Questions list</h1>
 <div class="container">
-<ul class="list-unstyled">
+<div class="lead well">
+<div class="media">
+  <img src="http://www.gravatar.com/avatar/424242" class="mr-3" alt="Avatar">
+  <div class="media-body">
+    <h5 class="mt-0">user@email.com asked:</h5>
+    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+  </div>
+</div>
+</div>
+<div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+
+    <div>
+    <button type="button" class="btn btn-success btn-sm">Submit new answer</button>
+    </div>
+        <ul>
   <li class="media">
     <img src="http://www.gravatar.com/avatar/424242" class="mr-3" alt="avatar">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">user@email.com asked:</h5>
+      <h5 class="mt-0 mb-1">user@email.com answered:</h5>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    <div>
-        <a href="/questions/42" class="btn btn-success btn-xs">View Answers</a>
-    </div>
     </div>
   </li>
   <li class="media my-4">
     <img src="http://www.gravatar.com/avatar/424242" class="mr-3" alt="avatar">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">user@email.com asked:</h5>
+      <h5 class="mt-0 mb-1">user@email.com answered:</h5>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    <div>
-        <a href="/questions/42" class="btn btn-success btn-xs">View Answers</a>
-    </div>
     </div>
   </li>
   <li class="media">
     <img src="http://www.gravatar.com/avatar/424242" class="mr-3" alt="avatar">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">user@email.com asked:</h5>
+      <h5 class="mt-0 mb-1">user@email.com answered:</h5>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    <div>
-        <a href="/questions/42" class="btn btn-success btn-xs">View Answers</a>
-    </div>
     </div>
   </li>
 </ul>
+    </div>
+</div>
 </div>
