--- a/app/views/home/question.html.erb
+++ b/app/views/home/question.html.erb
@@ -12,8 +12,10 @@
     <div class="col-sm-8 col-sm-offset-2">
 
     <div>
-    <button type="button" class="btn btn-success btn-sm">Submit new answer</button>
+    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#answer-modal">Submit new answer</button>
     </div>
+
+    <%= render  "home/new_answer_form" %>
         <ul>
   <li class="media">
     <img src="http://www.gravatar.com/avatar/424242" class="mr-3" alt="avatar">
